Main service logic

--- a/ArganTest/ArganTest.csproj
+++ b/ArganTest/ArganTest.csproj
@@ -121,6 +121,9 @@
     <Reference Include="Unity.Mvc5, Version=1.4.0.0, Culture=neutral, PublicKeyToken=43da31bc42a85347, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.Mvc5.1.4.0\lib\net45\Unity.Mvc5.dll</HintPath>
     </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -173,6 +176,12 @@
     <Compile Include="Features\DataAccess\Repositories\TestOrderRepository.cs" />
     <Compile Include="Features\DataAccess\Repositories\TestProductRepository.cs" />
     <Compile Include="Features\DataAccess\Repositories\UnitOfWork.cs" />
+    <Compile Include="Features\Orders\AddressDto.cs" />
+    <Compile Include="Features\Orders\IShipmentService.cs" />
+    <Compile Include="Features\Orders\OrdersController.cs" />
+    <Compile Include="Features\Orders\ProductDto.cs" />
+    <Compile Include="Features\Orders\ShipmentService.cs" />
+    <Compile Include="Features\Orders\ShippingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -215,11 +224,11 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Scripts\custom\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
